# NoteCast

./: .aider.input.history  .coverage  .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  Dockerfile  PLAN.md  README.md  REFACTORING_PLAN.md  docker-compose.yml  fix_feed_service.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_rss_e2e.py
.claude/: settings.local.json
.github/workflows/: docker.yml
.spec-gen/: config.json
.spec-gen/analysis/: CODEBASE.md  SUMMARY.md  dependencies.mermaid  dependency-graph.json  duplicates.json  env-inventory.json  fingerprint.json  llm-context.json  mapping.json  refactor-priorities.json  repo-structure.json  route-inventory.json
.spec-gen/generation/: pipeline-result.json  stage1-survey.json  stage2-entities.json  stage3-services.json  stage4-api.json  stage5-architecture.json
.spec-gen/logs/: llm-log-2026-04-24T20-59-04-533Z.json
.spec-gen/outputs/: generation-report.json
bridge/: .coverage  Dockerfile  conftest.py  harvester.py  main.py  requirements.txt  rss_transformer.py  test_harvester.py  test_rss_transformer.py  transformer.yaml.example
config/example/: transformer.yaml
config/laurent/: transformer.yaml
example/: app.py
notecast/: __init__.py  __main__.py
notecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notecast/api/: __init__.py
notecast/core/: __init__.py  auth_utils.py  exceptions.py  interfaces.py  models.py  types.py
notecast/infrastructure/: __init__.py
openspec/: config.yaml  rag-manifest.json
public/: app.js  index.html
scripts/: refresh-auth.sh
(+63 files in other folders)
